--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,5 +32,6 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
+          sudo cat /etc/proc/cpuinfo
           sudo apt-get install -y ifupdown
           sudo ./build.sh
