--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,5 +34,5 @@ jobs:
         run: |
           sudo lscpu
           sudo apt-get install -y ifupdown
-          sudo ./build.sh
+          sudo ./build-github.sh
         #  sudo cat /proc/cpuinfo
